--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Media Starter</title>
   <link rel="stylesheet" href="css/modnorm.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <!-- <link rel="stylesheet" href="css/nocom.css"> -->
+  <link rel="stylesheet" href="css/nocom.css">
 </head>
 <body>
   <header class="top-nav">
