--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Media Starter</title>
+  <title>Media Gallery</title>
   <link rel="stylesheet" href="css/modnorm.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/nocom.css">
@@ -34,12 +34,12 @@
       <p>Visit <a href="https://picsum.photos/">that site</a> to learn how to use them.</p>
     </section>
     <section class="grid-cont">
-      <article class="card">
+      <article class="card1">
         <!-- <img src="https://picsum.photos/480/320?grayscale&random=1" alt="alt-text reads . . ."> -->
         <h4>Heading for a bit</h4>
         <p>Purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh tortor id aliquet lectus proin nibh nisl condimentum id venenatis a condimentum</p>
         <button onclick="sampleFunction()">Click</button><!--when clicked, the function runs-->
-      </article><!--end article.card-->
+      </article><!--end article.card1-->
       
       <!--
         add more article.cards inside this section
@@ -48,7 +48,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy;2022 Your Name</p>
+    <p>&copy;2022 Rachel Benkovich</p>
   </footer>
   <script src="js/page.js"></script>
 </body>
