--- a/index.html
+++ b/index.html
@@ -1,54 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Media Gallery</title>
+  <title>A Page Full of Puppies</title>
   <link rel="stylesheet" href="css/modnorm.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/nocom.css">
 </head>
 <body>
   <header class="top-nav">
-    <a href="#" class="nav-link logo">Site&nbsp;Title</a>
+    <a href="#" class="nav-link logo">Pretty nature &nbsp;</a>
     <nav id="site-nav" class="nav-wrap">
-      <a href="#" class="nav-link">News</a>
-      <a href="#" class="nav-link">About</a>
-      <a href="#" class="nav-link">Specials</a>
-      <a href="#" class="nav-link">Contact</a>
+      <a href="#" class="nav-link">Day</a>
+      <a href="#" class="nav-link">Night</a>
+      <a href="#" class="nav-link">Sunrize</a>
     </nav>
     <a href="#" class="nav-link" id="trigram" onclick="navToggle()"></a>
   </header>
   <main>
     <section class="slideshow">
-      <!--slider goes here-->
-      <h2>slideshow here</h2>
+      <figure class="slides">
+        <img src="img/stars.jpg" />
+      </figure>
+      <figure class="slides">
+        <img src="img/sunset.jpg" />
+      </figure>
+      <figure class="slides">
+        <img src="img/hills.jpg" />
+      </figure>
+      <figure class="slides">
+        <img src="img/beach.jpg" />
+      </figure>
+      <figure class="slides">
+        <img src="img/trees.jpg" />
+      </figure>
+      <figure class="slides">
+        <img src="img/hole.jpg" />
+      </figure>
       <div class="controls">
-        <button>&#8249;</button>
-        <button>&#8250;</button>
+        <button class="prev" onclick="plusSlides(-1)">&#8249;</button>
+        <button class="next" onclick="plusSlides(1)">&#8250;</button>
+      </div>
+      <div class="caption-wrap">
+        <p id="caption">
+        </p>
+
       </div>
     </section>
-    <section class="hero">
-      <h2>Images from <em>Lorem Picsum</em></h2>
-      <p>Visit <a href="https://picsum.photos/">that site</a> to learn how to use them.</p>
-    </section>
+    <div class="photos">
+      <img class="pic" src="img/stars.jpg" onclick="currentSlide(1)" 
+      alt="stars" />
+      <img class="pic" src="img/sunset.jpg" onclick="currentSlide(2)" 
+      alt="sunset" />
+      <img class="pic" src="img/hills.jpg" onclick="currentSlide(3)" 
+      alt="hills" />
+      <img class="pic" src="img/beach.jpg" onclick="currentSlide(4)" 
+      alt="beach" />
+      <img class="pic" src="img/trees.jpg" onclick="currentSlide(5)" 
+      alt="trees" />
+      <img class="pic" src="img/hole.jpg" onclick="currentSlide(6)" 
+      alt="hole" />
+    </div>
     <section class="grid-cont">
-      <article class="card1">
-        <!-- <img src="https://picsum.photos/480/320?grayscale&random=1" alt="alt-text reads . . ."> -->
-        <h4>Heading for a bit</h4>
-        <p>Purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh tortor id aliquet lectus proin nibh nisl condimentum id venenatis a condimentum</p>
-        <button onclick="sampleFunction()">Click</button><!--when clicked, the function runs-->
-      </article><!--end article.card1-->
-      
-      <!--
-        add more article.cards inside this section
-      -->
-
+      <article class="card">
+        <div class="card-content">
+          <img src="img/sky.jpg" alt="sky with cloud">
+          <div class="card-text">
+            <h4>blue sky</h4>
+            <p>The bright blue sky is filled with color. Different shades of blue in a perfect gradient. The sky is partially covered with a wispy white cloud.</p>
+            <p></p>
+          </div>
+        </div>
+        <button class="open-modal" onclick="expand('72nd')">Read More <i data-feather="chevrons-up"></i></button>
+      </article>
+      <article class="card">
+        <div class="card-content">
+          <img src="img/fog.jpg" alt="dog with sweater on">
+          <div class="card-text">
+            <h4>endless fog</h4>
+            <p></p>
+            <p>The fog is so thick its hard to see where land ends and sky begins. Pastel pinks and yellows blended into the blue background. The fog entices you to enter the never-ending horizon. Once you walk off you will never return.</p>
+          </div>
+        </div>
+        <button class="open-modal" onclick="expand('78th')">Read More <i data-feather="chevrons-up"></i></button>
+      </article>
+      <article class="card">
+        <div class="card-content">
+          <img src="img/sunset.jpg" alt="Natural Light Image">
+          <div class="card-text">
+            <h4>orange sunset</h4>
+            <p>The gold in the sky reflects perfectly off the green grass covering everything in a shining glow. The beauty of this scene makes me irrationally happy.</p>
+            <p></p>
+          </div>
+        </div>
+        <button class="open-modal" onclick="expand('982nd')">Read More <i data-feather="chevrons-up"></i></button>
+      </article>
+      <article class="card">
+        <div class="card-content">
+          <img src="img/trees.jpg" alt="Medium size fluffy dog">
+          <div class="card-text">
+            <h4>ominous trees</h4>
+            <p>Something sinister is just beyond the trees. The mystery of what lurks past view quickens your heartbeat. Soon the sun will set and the only light to guide you will be the moon. All alone in these woods where no one will be able to hear your screams. </p> 
+        </div>
+        <button class="open-modal" onclick="expand('79th')">Read More <i data-feather="chevrons-up"></i></button>
+      </article>
     </section>
-  </main>
   <footer>
-    <p>&copy;2022 Rachel Benkovich</p>
+    <p>&copy;Rachel Benkovich</p>
   </footer>
   <script src="js/page.js"></script>
 </body>
